tests/errors/operators/004.err
[1m[0;31merror: [0mtype mismatch between operands
  [1m[34m-->[0m tests/errors/operators/004.ura:6:18
  [1m[34m|[0m
[1m[34m6 |[0m     return twice + 1
  [1m[34m|[0m                  [1;31m^[0m
